Added travel package frontend

--- a/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/public/index.html
+++ b/TRAVEL_MANAGEMENT-SYSTEM-FRONTEND/public/index.html
@@ -64,7 +64,7 @@ signInButton.addEventListener('click', () => {
 
     </script>
    
-    <title>Dream Travelers</title>
+    <title>Leisure Travelers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
